fixed header on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@ then http://autoprefixer.github.io/ */
   --dark: #343a40;
   --dark-grey: #2b2b2b;
 }
+@media all and (max-width: 750px){
+  :root {
+    --spacing: 10px;
+  }
+}
 
 * {
   box-sizing: border-box; /* force the padding and border to be included in the final specified width rather than being added on top, with the width of the item itself changing to accommodate the padding and border */
@@ -50,6 +55,7 @@ body {
     font-size: var(--font-size_l);
   }
 }
+
 main {
   text-align: center;
   padding: 20px;
@@ -87,6 +93,17 @@ main {
   padding-bottom: var(--spacing);
 }
 
+@media all and (max-width: 500px) {
+  p, .mobile-clear {
+    clear: both;
+    padding-top: var(--spacing);
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 15px;
+  }
+}
+
 
 /* ----- GENERAL ELEMENTS ----- */
 
@@ -102,6 +119,11 @@ h2 {
 h3 {
   font-size: 22px;
   font-weight: var(--heading-font-weight);
+}
+@media all and (max-width: 750px){
+  h1 {
+    font-size: 28px;
+  }
 }
 @media all and (min-width: 1600px) {
   h1 {
@@ -184,29 +206,6 @@ a:visited.button {
 hr {
   /* margin-top: var(--spacing); */
   margin: 65px auto;
-}
-
-/* ----- Adaptations for small screens ----- */
-@media all and (max-width: 750px){
-  :root {
-    --spacing: 10px;
-  }
-  h1 {
-    font-size: 28px;
-  }
-}
-@media all and (max-width: 500px) {
-  body {
-    padding: var(--spacing); /* 10px */
-  }
-  p, .mobile-clear {
-    clear: both;
-    padding-top: var(--spacing); /* 10px */
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 15px;
-  }
 }
 
 
